# Crypto-EV

./: QUICKSTART.md  README.md  pyproject.toml
crypto_ev/: __init__.py  cli.py  ev.py  market.py  metrics.py  models.py  simulation.py
examples/: advanced_example.py  basic_example.py
src/: __init__.py  ev calculator remake.py  ev_calculator.py  market_model.py  monte_carlo.py  utilities.py  visualization.py
tests/: test_crypto_ev.py  test_simulator.py
