[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "crypto-ev"
version = "0.1.0"
description = "Crypto expected value calculator and Monte Carlo simulator"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "OpenAI Codex" }]
dependencies = []

[project.scripts]
crypto-ev = "crypto_ev.cli:main"

[tool.setuptools.packages.find]
include = ["crypto_ev*"]
